@@ -1,5 +1,10 @@
 2004-03-11  Bruno Haible  <bruno@clisp.org>
 
+	* makemake.in (cpu): Set to x86_64 if appropriate.
+	(XCFLAGS): Add -O when the CPU is x86_64.
+
+2004-03-11  Bruno Haible  <bruno@clisp.org>
+
 	* configure: Configure libcharset with --disable-shared on all
 	platforms, not only on cygwin and mingw. Needed because libtool's
 	support for shared libraries is broken at least on HP-UX 10 with gcc.
